--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "telco_app_backend",
+  "name": "api-vercel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mssql": "^11.0.1"
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
+    "mssql": "^9.1.1",
+    "nodemon": "^2.0.20"
   }
 }
